<resources>
    <string name="app_name">Inec Fika</string>
    <string name="voters_register">VOTERS REGISTER</string>
    <string name="accredited_voters">ACCREDITED VOTERS</string>
    <string name="issued_ballot_papers">ISSUED BALLOT PAPERS</string>
    <string name="unused_ballot_papers">UNUSED BALLOT PAPERS</string>
    <string name="spoiled_ballot_papers">SPOILED BALLOT PAPERS</string>
    <string name="rejected_ballot_papers">REJECTED BALLOT PAPERS</string>
    <string name="total_valid_vote">TOTAL VALID VOTE</string>
    <string name="used_ballot_papers">USED BALLOT PAPERS</string>
    <string name="button">Button</string>
    <string name="result">RESULT</string>
    <string name="reset">RESET</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
